--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'TT'
 - !lcsh 'Needlework'
 - !lcsh 'Handicraft'
+- GITenberg
 title: "Handicraft for Girls\r\nA Tentative Course in Needlework, Basketry, Designing,\
   \ Paper and Cardboard Construction, Textile Fibers and Fabrics and Home Decoration\
   \ and Care"
